@@ -147,6 +147,28 @@ sub uploadFile {
 	return %r['file'];
 }
 
+sub uploadBigFile {
+	local('$handle %r $data $file $progress $total $sofar $time $start');
+
+	$total = lof($1);
+	$progress = [new javax.swing.ProgressMonitor: $null, "Upload " . getFileName($1), "Starting upload", 0, lof($1)];
+	$start = ticks();
+	$handle = openf($1);
+	$data = readb($handle, 1024 * 256);
+	%r = call($mclient, "armitage.upload", getFileName($1), $data);
+	$sofar += strlen($data);
+
+	while $data (readb($handle, 1024 * 256)) {
+		$time = (ticks() - $start) / 1000.0;
+		[$progress setProgress: $sofar];
+		[$progress setNote: "Speed: " . round($sofar / $time) . " bytes/second"];
+		call($mclient, "armitage.append", getFileName($1), $data);
+		$sofar += strlen($data);
+	}
+	[$progress close];
+	return %r['file'];
+}
+
 sub downloadFile {
 	local('$file $handle %r $2');
 	%r = call($mclient, "armitage.download", $1);
